--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+
+    ext {
+        compose_version = '1.2.1'
+        retrofit_version = '2.9.0'
+        hilt_version = '2.42'
+        lifecycle_version = '2.6.0-alpha02'
+    }
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+    }
+}
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
