theme and repository setup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PixabayImageSearch"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.PixabayImageSearch"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
