--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.0'
 
     //Coil
-    implementation "io.coil-kt:coil:2.1.0"
+    implementation "io.coil-kt:coil-compose:2.2.2"
 
     //retrofit
     implementation "com.google.code.gson:gson:$retrofit_version"
@@ -75,6 +75,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     //lifecycle,view model & livedata
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
@@ -84,6 +85,7 @@ dependencies {
     //DI with Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
@@ -99,6 +101,9 @@ dependencies {
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    // system ui controller
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+
     //unit testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -109,6 +114,7 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     testImplementation "com.google.truth:truth:1.1.3"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
 
 }
 kapt {
