--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         compose_version = '1.2.1'
         retrofit_version = '2.9.0'
         hilt_version = '2.42'
+        kotlin_version = '1.7.20'
         lifecycle_version = '2.6.0-alpha02'
     }
     dependencies {
@@ -14,7 +15,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
 
 task clean(type: Delete) {
