--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id "kotlin-kapt"
-    id "dagger.hilt.android.plugin"
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+    id 'kotlin-android'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -41,7 +43,8 @@ android {
     }
     composeOptions {
         // kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerExtensionVersion "1.3.0-rc02"
+        kotlinCompilerVersion "1.7.20"
+        kotlinCompilerExtensionVersion "1.3.2"
     }
     packagingOptions {
         resources {
@@ -57,6 +60,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -96,7 +101,7 @@ dependencies {
 
     //Image Rendering Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -116,7 +121,4 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
 
-}
-kapt {
-    correctErrorTypes true
 }
